implement change document category